Fix login form size on IE7

--- a/skins/larry/ie7hacks.css
+++ b/skins/larry/ie7hacks.css
@@ -29,7 +29,7 @@ a.deletebutton,
 .boxfooter .listbutton .inner,
 .attachmentslist li a.delete,
 .attachmentslist li a.cancelupload,
-#messagepreviewheader .iconlink {
+.previewheader .iconlink {
 	/* workaround for text-indent which also offsets the background image */
 	text-indent: 0;
 	font-size: 0;
@@ -45,7 +45,7 @@ a.deletebutton,
 
 .pagenav a.button,
 .pagenav a.button span.inner,
-#messagepreviewheader .iconlink,
+.previewheader .iconlink,
 #uploadform a.iconlink {
 	display: inline;
 }
@@ -56,6 +56,10 @@ a.deletebutton,
 
 .dropbutton .dropbuttontip {
 	right: -2px;
+}
+
+#login-form .box-inner form {
+	margin: 0;
 }
 
 #login-form #message div {
